--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ethers": "^6.11.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
     "react-hot-toast": "^2.4.1",
