--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-helmet-async": "^2.0.4",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.22.1",
+    "serve": "^14.2.1",
     "web3": "1.8.2"
   },
   "devDependencies": {
