--- a/package.json
+++ b/package.json
@@ -12,12 +12,22 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@iconify/react": "^4.1.1",
     "@mui/material": "^5.15.11",
+    "@web3modal/ethers": "^4.1.1",
+    "ethers": "^6.11.1",
+    "framer-motion": "^11.0.15",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
-    "react-router-dom": "^6.22.1"
+    "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^6.22.1",
+    "serve": "^14.2.1",
+    "simplebar": "^5.3.6",
+    "simplebar-react": "^3.2.4",
+    "web3": "1.8.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
